logs/cartodb-dashboard.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cartodb_dashboard'...
Compiling './lib/python3.5/site-packages/cartodb_dashboard/cartodb_dashboard.py'...
***   File "./lib/python3.5/site-packages/cartodb_dashboard/cartodb_dashboard.py", line 17
    print 'The requests package is required: http://docs.python-requests.org/en/latest/user/install/#install'
                                                                                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/cartodb_dashboard-0.2.11.egg-info'...
Listing './lib/python3.5/site-packages/httplib2'...
Listing './lib/python3.5/site-packages/httplib2-0.10.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
